# HTWK_SmartDriving_2016

./: LICENSE  README.md  deploy-config.py  deploy.py  transfer-config.py  transfer-config.sh  transfer-to-car.py  transfer-to-car.sh
src/smart-driving/: CMakeLists.txt  build-car.py  build-ci.py  build.py  test-ci.sh
src/smart-driving/lib/: CMakeLists.txt
src/smart-driving/lib/lmfit/: CMakeLists.txt  lmcurve.c  lmcurve.h  lmcurve_tyd.c  lmcurve_tyd.h  lmmin.c  lmmin.h  lmstruct.h
src/smart-driving/src/: CMakeLists.txt
src/smart-driving/src/demo_dynamic_binding/: CMakeLists.txt  demo_interface_proxy.cpp  demo_interface_proxy.h  readme.txt  stdafx.cpp  stdafx.h
src/smart-driving/src/htwk_base_decision_module/: BaseDecisionModule.cpp  BaseDecisionModule.h  CMakeLists.txt
src/smart-driving/src/htwk_calc_movement/: CMakeLists.txt  MovementCalculator.cpp  MovementCalculator.h
src/smart-driving/src/htwk_carconfig/: CMakeLists.txt  CarConfigReader.cpp  CarConfigReader.h
src/smart-driving/src/htwk_collision_prevention/: CMakeLists.txt  CollisionPrevention.cpp  CollisionPrevention.h
src/smart-driving/src/htwk_crossing_detection/: CMakeLists.txt  CrossingDetection.cpp  CrossingDetection.h  stdafx.h
src/smart-driving/src/htwk_depth_detection/: BirdsEyeViewer.cpp  BirdsEyeViewer.h  CMakeLists.txt  ConnectedComponentFinder.cpp  ConnectedComponentFinder.h  CoordinateConverter.cpp  CoordinateConverter.h  DepthDetection.cpp  DepthDetection.h  GroundRemover.cpp  GroundRemover.h  NoiseRemover.cpp  NoiseRemover.h
src/smart-driving/src/htwk_distance_sensor_merger/: CMakeLists.txt  DistanceSensorMerger.cpp  DistanceSensorMerger.h
src/smart-driving/src/htwk_drive_decision/: CMakeLists.txt  DriveDecision.cpp  DriveDecision.h
src/smart-driving/src/htwk_drive_decision_test/: CMakeLists.txt  DriveDecisionTest.cpp  DriveDecisionTest.h
src/smart-driving/src/htwk_function_driver/: CMakeLists.txt  FunctionDriver.cpp  FunctionDriver.h
src/smart-driving/src/htwk_grayscale/: CMakeLists.txt  Grayscale.cpp  Grayscale.h
src/smart-driving/src/htwk_idle/: CMakeLists.txt  Idle.cpp  Idle.h
src/smart-driving/src/htwk_image_fusion_reactor/: CMakeLists.txt  ImageFusionReactor.cpp  ImageFusionReactor.h
src/smart-driving/src/htwk_imu_merger/: CMakeLists.txt  ImuMerger.cpp  ImuMerger.h  ImuMergerTest.cpp  ImuMergerTest.h
src/smart-driving/src/htwk_imu_outlier_remover/: CMakeLists.txt  IMUOutlierRemover.cpp  IMUOutlierRemover.h
src/smart-driving/src/htwk_ipm/: CMakeLists.txt  ipm.cpp  ipm.h
src/smart-driving/src/htwk_lane_angle/: CMakeLists.txt  LaneAngle.cpp  LaneAngle.h
src/smart-driving/src/htwk_lane_calc/: CMakeLists.txt  Lane_calc.cpp  Lane_calc.h
src/smart-driving/src/htwk_lane_detection/: CMakeLists.txt  lane_detection.cpp  lane_detection.h
src/smart-driving/src/htwk_lane_driver/: CMakeLists.txt  lane_driver.cpp  lane_driver.h
src/smart-driving/src/htwk_logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/smart-driving/src/htwk_magic_module/: CMakeLists.txt  Magic.cpp  Magic.h
src/smart-driving/src/htwk_marker_detection/: CMakeLists.txt  MarkerDetection.cpp  MarkerDetection.h  stdafx.h
src/smart-driving/src/htwk_marker_evaluator/: CMakeLists.txt  MarkerEvaluator.cpp  MarkerEvaluator.h  stdafx.cpp  stdafx.h
src/smart-driving/src/htwk_median_values/: CMakeLists.txt  Median_values_lib.cpp  Median_values_lib.h
src/smart-driving/src/htwk_median_values_filter/: CMakeLists.txt  Median_values.cpp  Median_values.h
src/smart-driving/src/htwk_messagebus_netio/: CMakeLists.txt  demo_netio_filter.plb.plugindescription  demonetiofilter.cpp  demonetiofilter.h  readme.txt  stdafx.cpp  stdafx.h
src/smart-driving/src/htwk_movement_analyzer/: CMakeLists.txt  Movement_analyzer.cpp  Movement_analyzer.h
src/smart-driving/src/htwk_movement_visualizer/: CMakeLists.txt  MovementVisualizer.cpp  MovementVisualizer.h
src/smart-driving/src/htwk_networking/: CMakeLists.txt  dataexchange_raw.cpp  readme.txt  stdafx.cpp  stdafx.h
src/smart-driving/src/htwk_noise_remover/: CMakeLists.txt  NoiseRemover.cpp  NoiseRemover.h
src/smart-driving/src/htwk_obstacle_passing/: CMakeLists.txt  Passing.cpp  Passing.h
src/smart-driving/src/htwk_park_assist/: CMakeLists.txt  CrossParking.cpp  CrossParking.h  ParallelParking.cpp  ParallelParking.h  ParkingBase.cpp  ParkingBase.h  PullOut.cpp  PullOut.h
src/smart-driving/src/htwk_region_of_interest/: CMakeLists.txt  RegionOfInterest.cpp  RegionOfInterest.h
src/smart-driving/src/htwk_signal_restrictor/: CMakeLists.txt  SignalRestrictor.cpp  SignalRestrictor.h
src/smart-driving/src/htwk_simple_shape_factory/: CMakeLists.txt  simple_shape.cpp  simple_shape.h  stdafx.cpp  stdafx.h
src/smart-driving/src/htwk_state_controller/: CMakeLists.txt  JuryEnums.h  StateController.cpp  StateController.h  StateControllerNew.cpp  StateControllerNew.h  StateControllerTest.cpp  StateControllerTest.h  stdafx.cpp  stdafx.h
src/smart-driving/src/htwk_structs/: CMakeLists.txt  Direction.h  DriveModule.h  Maneuverlist.h  ObstacleGrid.h  WorldModel.h  tCarState.h  tIMU.h  tLane.h  tLine.h  tLineStatus.h  tManeuver.h  tPoint.h  tReadyModule.h  tRect.h  tRoadSign.h
src/smart-driving/src/htwk_temporal_image/: CMakeLists.txt  TemporalImage.cpp  TemporalImage.h
src/smart-driving/src/htwk_trigger/: CMakeLists.txt  Trigger.cpp  Trigger.h
src/smart-driving/src/htwk_turn/: CMakeLists.txt  Turn.cpp  Turn.h
src/smart-driving/src/htwk_ultra_detection/: CMakeLists.txt  htwk_ultra_detection.cpp  htwk_ultra_detection.h  htwk_ultra_grid.cpp  htwk_ultra_grid.h
src/smart-driving/src/htwk_ultra_median/: CMakeLists.txt  UltraMedian.cpp  UltraMedian.h
src/smart-driving/src/htwk_utils/: CMakeLists.txt  CalcOffset.cpp  CalcOffset.h  DateUtils.cpp  DateUtils.h  DriveUtils.cpp  DriveUtils.h  GeneralUtils.cpp  GeneralUtils.h  HTWKMath.cpp  HTWKMath.h  LinearFunction.cpp  LinearFunction.h  MapChecker.cpp  MapChecker.h  PolynomialFitter.cpp  PolynomialFitter.h  PolynomialFunction.cpp  PolynomialFunction.h  StringUtils.cpp  (+3 more)
src/smart-driving/test/: CMakeLists.txt  run_tests.cpp
(+155 files in other folders)
