# Sensoraufbereitung
add_subdirectory(htwk_median_values)
add_subdirectory(htwk_median_values_filter)
add_subdirectory(htwk_vision)
add_subdirectory(htwk_ipm)
add_subdirectory(htwk_region_of_interest)
add_subdirectory(htwk_noise_remover)
add_subdirectory(htwk_ultra_detection)
add_subdirectory(htwk_temporal_image)
add_subdirectory(htwk_marker_evaluator)
add_subdirectory(htwk_marker_detection)
add_subdirectory(htwk_depth_detection)
add_subdirectory(htwk_ultra_median)
add_subdirectory(htwk_grayscale)
add_subdirectory(htwk_state_controller)
add_subdirectory(htwk_lane_detection)
add_subdirectory(htwk_imu_merger)
add_subdirectory(htwk_image_fusion_reactor)
add_subdirectory(htwk_calc_movement)
add_subdirectory(htwk_movement_analyzer)


# Entscheidungsfindung
add_subdirectory(htwk_collision_prevention)
add_subdirectory(htwk_obstacle_passing)
add_subdirectory(htwk_park_assist)
add_subdirectory(htwk_turn)
add_subdirectory(htwk_lane_driver)
add_subdirectory(htwk_drive_decision)
add_subdirectory(htwk_idle)
add_subdirectory(htwk_base_decision_module)

# Kuer
add_subdirectory(htwk_yaw_to_steer)
add_subdirectory(htwk_imu_outlier_remover)
add_subdirectory(htwk_ysd_comparer)
add_subdirectory(htwk_movement_visualizer)


# Misc
add_subdirectory(htwk_logger)
add_subdirectory(htwk_utils)
add_subdirectory(htwk_world_service)
add_subdirectory(htwk_world_service_h)
add_subdirectory(htwk_world_filter)
add_subdirectory(htwk_structs)
add_subdirectory(htwk_signal_restrictor)
add_subdirectory(htwk_trigger)


#add_subdirectory(htwk_drive_decision_test)
#add_subdirectory(htwk_simple_shape_factory)
#add_subdirectory(htwk_function_driver)
#add_subdirectory(htwk_lane_calc)
#add_subdirectory(htwk_magic_module)
#add_subdirectory(htwk_distance_sensor_merger)
#add_subdirectory(demo_dynamic_binding)
#add_subdirectory(htwk_networking)
